--- a/.github/workflows/py_lint.yml
+++ b/.github/workflows/py_lint.yml
@@ -31,11 +31,9 @@ jobs:
         with:
           python-version: '3.12'
       
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint
+    - name: "Find and install all requirements.txt files"
+      run: |
+        find . -name 'requirements.txt' -exec pip install -r {} \;
       
       - name: Run pylint
         run: pylint **/*.py --fail-under=8
