--- a/weekly-openmeteo/Dockerfile
+++ b/weekly-openmeteo/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 COPY requirements.txt .
 RUN pip install -r requirements.txt 
 
+COPY api_error.py .
 COPY pipeline.py .
 COPY load.py .
 COPY extract.py .
