Changed JSON output to .txt.

--- a/.github/workflows/py_test.yml
+++ b/.github/workflows/py_test.yml
@@ -29,11 +29,11 @@ jobs:
     - name: "Install pytest-cov for coverage reporting"
       run: pip install pytest-cov
 
-    - name: "Run pytest with coverage and generate JSON report"
-      run: pytest --cov=. --cov-report=json
+    - name: "Run pytest with coverage and save report to text file"
+      run: pytest --cov=. > coverage_report.txt
 
-    - name: "Upload coverage JSON report"
+    - name: "Upload coverage text report"
       uses: actions/upload-artifact@v3
       with:
-        name: coverage-json-report
-        path: coverage.json
+        name: coverage-txt-report
+        path: coverage_report.txt
